next version <kevin@koconnor.net>

  * RAMADDR no longer defaults to 0xa0000000 on unknown hardware.
    (The devices that use that address are easy to detect, and it
    causes confusing error messages on other devices.)

  * PXA irq watching has been modified so that it conforms with other
    platforms.  This is a user visible change: to ignore interrupts
    use "IBIT IRQS x" instead of "SET II(x) 1" (x may not be the
    same).  The new output will only make sense if one is using the
    haretconsole script.

  * Improve memory detection on wince 5 (and later) devices.  It
    should no longer be necessary to set RAMSIZE for most devices.

  * New command: LOADFUNC

  * Haret now runs on wince 2.11 devices.  (Fixed issue which caused
    command dispatch to not work.)

20070606 0.4.8 <kevin@koconnor.net>

  * New commands: ATIDBG, ADDR2MOD, PLAYSOUND, SETLCD

  * New support for tracing memory (or coprocessors) during a wince
    resume.  This can be done with something like:
      addlist resumetraces cp 15 0 1 0 0

  * Support for watching coprocessor registers in addition to memory
    locations.  This can be used with something like:
      addlist gpios cp 15 0 2 0 0

  * New syntax for watching memory areas.  The addwatch (and
    addirqwatch / addtracewatch) command is now "addlist GPIOS ..."
    (and "addlist IRQS ..." / "addlist TRACES ...").  The lswatch
    command is now "showvar <var>", the ignorewatch/unignorewatch
    commands are now "ibit <var>" and "wbit <var>".  Finally, the
    "clearwatch" command becomes "clearvar <var>".  Internally, the
    code now uses variables for the various watchlists, which will
    make it easier to add new watchlists in the future.

  * New support for memory tracing based on MMU manipulation.  This
    allows one to watch reads/writes to memory on any ARM platform.
    To use this infrastructure, run "addlist mmutrace <start> <size>
    <rw>".  Where <start> is address to trace, <size> is the size of